src/objects/Apttus_Config2__AccountBillingSummary__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__LastCalculated__c</fullName>
        <description>This is the point in time when the Account Billing Summary was fully calculated. This happens when one or more of the contributing Billing objects (Invoices, Schedules, etc.) have changed and the change is detected by the Account Billing Summary batch job.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the point in time when the Account Billing Summary was fully calculated. This happens when one or more of the contributing Billing objects (Invoices, Schedules, etc.) have changed and the change is detected by the Account Billing Summary batch job</inlineHelpText>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastInvoiceDate__c</fullName>
        <description>The last invoice date for the account</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The last invoice date for the account</inlineHelpText>
        <label>Last Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextInvoiceDate__c</fullName>
        <description>The next invoice date for the account</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The next invoice date for the account</inlineHelpText>
        <label>Next Invoice Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>